# cloud-steg

./: .gitignore  CLIENT_TESTING.md  Cargo.toml  Local_README.md  QUICK_START.md  QUICK_START_3_CLIENTS.sh  QUICK_TEST_COMMANDS.sh  QUICK_TEST_STEGANOGRAPHY.sh  README.md  REGISTER_3_CLIENTS.sh  RE_REGISTER_CLIENTS.sh  STEGANOGRAPHY_COMMANDS.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  TEST_RESULTS.md  TEST_STEGANOGRAPHY.md  VIEW_COUNT_API.md  comprehensive_test.sh  config.toml  define-variables.sh  download_online_clients.sh  run-test-clients.sh  run_3_servers.sh  start-clients.sh  test_3_clients.sh  test_3_servers.sh  test_3_servers_integrated.sh  test_firebase.rs  test_steganography.sh  test_view_count.sh
client/: Cargo.toml
client/data/: client_alice.json  client_bob.json
client/src/: main.rs  steganography.rs
data/: client_alice.json  client_bob.json  client_charlie.json
online_clients/alice/: info.json
server/: .gitignore  Cargo.toml  config.toml  config_3servers.toml
server/data/: photo_requests.json  users.json  view_records.json
server/data/server1/: photo_requests.json  users.json  view_records.json
server/data/server3/: users.json
server/src/: api.rs  main.rs
server/src/registration/: user_info.rs
src/: api.rs  main.rs  test_drive.rs
src/registration/: auth.rs  config.rs  error.rs  image_storage.rs  mod.rs  note_storage.rs  user_directory.rs  user_info.rs
tools/: quick_test.sh  run_demo.sh  test_image_upload.sh  test_multiple_images.sh
user-ui/: package-lock.json  package.json  server.js  steg.js  view-image-endpoint.js
user-ui/public/: app.js  index.html  style.css
