[package]
name = "dist_leader"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
sysinfo = "0.29"
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
rand = "0.8" 