[package]
name = "dist_leader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_firebase"
path = "test_firebase.rs"

[dependencies]
toml = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
sysinfo = "0.29"
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
rand = "0.8" 

# HTTP endpoint
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Firebase Storage
cloud-storage = "0.11"
futures = "0.3"

# Keep these utilities
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

# REMOVED: All Google Drive dependencies (google-drive3, yup-oauth2, hyper, hyper-util, hyper-rustls, http-body-util, rustls)
