[package]
name = "p2p-discovery-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
# Leader election dependencies
toml = "0.8"
clap = { version = "4.2", features = ["derive"] }
sysinfo = "0.29"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

