[package]
name = "dist_leader"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
sysinfo = "0.29"
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
rand = "0.8" 

# NEW: Add these for HTTP endpoint
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# NEW: Add Google Drive dependencies
google-drive3 = "6"
yup-oauth2 = "11"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http2", "ring", "tls12"] }
http-body-util = "0.1"
rustls = { version = "0.23", features = ["ring"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }